# Bad-RFs

./: README.md  pyproject.toml
badnerf/: bad_camera_optimizer.py  bad_config_dataparser.py  bad_config_method.py  bad_gaussians.py  bad_utils.py  bad_viewer.py  badnerf_camera_optimizer.py  badnerf_config.py  badnerf_config_dataparser.py  badnerf_config_method.py  badnerf_dataloader.py  badnerf_datamanager.py  badnerf_dataparser.py  badnerf_dataparser_config.py  badnerf_method_config.py  badnerf_pipeline.py  badnerf_pipeline_common.py  badnerf_trainer.py  badnerf_viewer.py  badnerfacto.py  deblur_nerf_dataparser.py  image_restoration_datamanager.py  image_restoration_dataparser.py  image_restoration_full_image_datamanager.py  image_restoration_pipeline.py  image_restoration_trainer.py  spline.py  spline_functor.py
badnerf/cameras/: badnerf_camera_optimizer.py  spline.py
badnerf/data/: badnerf_dataloader.py  badnerf_datamanager.py  badnerf_dataparser.py
badnerf/engine/: badnerf_trainer.py  badnerf_vanilla_trainer.py
badnerf/models/: badnerfacto.py
badnerf/pipelines/: badnerf_pipeline.py  badnerf_pipeline_common.py  badnerf_vanilla_pipeline.py
badrfs/: bad_gaussians.py  badnerf_camera_optimizer.py  badnerf_config_dataparser.py  badnerf_config_method.py  badnerf_model_common.py  badnerf_viewer.py  badnerfacto.py  badrf_camera_optimizer.py  badrf_config_dataparser.py  badrf_config_method.py  badrf_utils.py  badrf_viewer.py  deblur_nerf_dataparser.py  image_restoration_dataloader.py  image_restoration_datamanager.py  image_restoration_dataparser.py  image_restoration_full_image_datamanager.py  image_restoration_pipeline.py  image_restoration_trainer.py  spline.py
tests/: test_spline.py
