[project]
name = "badrfs"
version = "1.0.1"

dependencies=[
    "nerfstudio>=1.0.2",
    "pypose"
]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]

[tool.setuptools.packages.find]
include = ["badrfs"]

[project.entry-points.'nerfstudio.dataparser_configs']
image-restore-data = 'badrfs.badnerf_config_dataparser:ImageRestoreDataParser'
deblur-nerf-data = 'badrfs.badnerf_config_dataparser:DeblurNerfDataParser'

[project.entry-points.'nerfstudio.method_configs']
badnerf_nerfacto = 'badrfs.badnerf_config_method:badnerf_nerfacto'
bad_gaussians = 'badrfs.badnerf_config_method:bad_gaussians'
