[project]
name = "badrfs"
version = "1.0.2"

dependencies=[
    "nerfstudio>=1.0.2",
    "pypose"
]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]

[tool.setuptools.packages.find]
include = ["badrfs"]

[project.entry-points.'nerfstudio.dataparser_configs']
image-restore-data = 'badrfs.badrf_config_dataparser:ImageRestoreDataParser'
deblur-nerf-data = 'badrfs.badrf_config_dataparser:DeblurNerfDataParser'

[project.entry-points.'nerfstudio.method_configs']
bad_nerfacto = 'badrfs.badrf_config_method:bad_nerfacto'
bad_gaussians = 'badrfs.badrf_config_method:bad_gaussians'
