[project]
name = "badnerf"
version = "1.0.1"

dependencies=[
    "nerfstudio>=1.0.2",
    "pypose"
]

# black
[tool.black]
line-length = 120

# pylint
[tool.pylint.messages_control]
max-line-length = 120
generated-members = ["numpy.*", "torch.*", "cv2.*", "cv.*"]

[tool.setuptools.packages.find]
include = ["badnerf"]

[project.entry-points.'nerfstudio.dataparser_configs']
deblur-nerf-data = 'badnerf.bad_config_dataparser:DeblurNerfDataParser'

[project.entry-points.'nerfstudio.method_configs']
badnerf_nerfacto = 'badnerf.bad_config_method:badnerf_nerfacto'
